chore: productid page fix change variant styles misaligned

--- a/src/components/full-page-comps/styles/productid.module.css
+++ b/src/components/full-page-comps/styles/productid.module.css
@@ -25,7 +25,7 @@
 
 .productDetails {
     width: 40%;
-    padding: 1rem;
+    /* padding: 1rem; */
     height: fit-content;
     /* padding-top: 0rem;
     margin-top: -1rem; */
@@ -141,10 +141,11 @@
 }
 
 .title {
-    margin: 0.5rem 0;
+    margin: 0;
     font-size: 2rem;
     text-transform: capitalize;
     line-height: 1.1;
+    margin-bottom: 0.5rem;
 }
 
 .description {
@@ -226,7 +227,6 @@
         border: none;
         padding: 1rem;
         padding-top: 0rem;
-        margin-top: -1rem;
     }
 
     .orderSpecificationsContainer {
